Gradle 9 support, Java 25 requirement (#90)